feat: create save method